# poison-guard-monorepo-t

./: docker-compose.yml  package-lock.json
blockchain_ledger/: package-lock.json  package.json
blockchain_ledger/contracts/: ProvenanceGatekeeper.sol
cpp_ingestion_core/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ingestion_core
cpp_ingestion_core/src/: main.cpp  zmq_client.cpp  zmq_client.hpp
frontend/btop_tui/: hacker_dashboard.py
frontend/react_web_app/: index.html  package-lock.json  package.json
frontend/react_web_app/src/: App.jsx  IngestionPortal.jsx  UmapDashboard.jsx  index.css
frontend/react_web_app/src/components/: BlockchainGatekeeper.jsx  InteractiveBackground.jsx  ShaderBackground.jsx
frontend/react_web_app/src/pages/: LandingPage.jsx  ProcessingPage.jsx  UploadPage.jsx  VisualizationDashboard.jsx
python_ml_backend/: credit_test.csv  generate_poison_csv.py  main.py  ml_classes.py  poison_test.csv  prepare_credit_data.py  prepare_data.py  rl_warden.py  test_client.html  test_cpp_stream.py
shared_data/: generate_data.py
shared_data/shared_data/: sha.txt
